# dualarm_robot

./: README.md
industrial_moveit/: CMakeLists.txt  package.xml
industrial_moveit/include/: SetIO.h  industrial_moveit.h
industrial_moveit/src/: IO_TEST.cpp  SetIO.cpp  industrial_moveit.cpp
siasun_dualarm5b_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
siasun_dualarm5b_moveit_config/config/: controllers.yaml  controllers.yaml~  fake_controllers.yaml  joint_limits.yaml~  joint_names.yaml~  kinematics.yaml  ompl_planning.yaml  ompl_planning.yaml~  siasun_dualarm5b.srdf
siasun_dualarm5b_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch~  moveit_rviz.launch  moveit_rviz.launch~  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  siasun_dualarm5b_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
siasun_dualarm5b_support/: CMakeLists.txt  package.xml
siasun_dualarm5b_support/collision/: base_link.stl  frame.stl  link_5.stl  link_7_l.stl
siasun_dualarm5b_support/config/: joint_names_5b.yaml~  siasun_dualarm5b_motion_interface.yaml~
siasun_dualarm5b_support/meshes/: base.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_6.stl  link_7_r.stl
siasun_dualarm5b_support/urdf/: ceshi.urdf~  chapt.urdf~  dof7 _stl.urdf~  han.urdf~  siasun_dualarm5b.urdf~
siasun_dualarm_driver/: CMakeLists.txt  package.xml
siasun_dualarm_driver/include/: siasun_dualarm.h~
siasun_dualarm_driver/include/industrial_robot_client/: IO_states_config.h  joint_feedback_relay_handler.h  joint_relay_handler.h  joint_trajectory_action.h  joint_trajectory_downloader.h  joint_trajectory_interface.h  joint_trajectory_streamer.h  robot_group.h  robot_state_interface.h  robot_status_relay_handler.h  siasun_dualarm_utils.h  system_safty.h
siasun_dualarm_driver/include/simple_message/: joint_data.h  joint_traj_pt_message.h~  message_manager.h  robot_status.h  simple_message.h
siasun_dualarm_driver/include/simple_message/messages/: joint_traj_pt_full_message.h  joint_traj_pt_message.h
siasun_dualarm_driver/launch/: io_states_config (copy).launch~  motion_download_interface.launch  motion_download_interface.launch~  motion_streaming_interface.launch  motion_streaming_interface.launch~  robot_interface_download.launch~  robot_interface_download_5d.launch~  robot_interface_streaming.launch~  robot_interface_streaming_5d.launch  robot_state.launch~  system_safty.launch  system_safty.launch~
siasun_dualarm_driver/src/: IO_states_node.cpp  joint_download_node.cpp  joint_streamer_node.cpp  joint_trajectory_node.cpp  robot_state_node.cpp  system_safty_node.cpp
siasun_dualarm_driver/src/industrial_robot_client/: IO_states_config.cpp  joint_feedback_relay_handler.cpp  joint_relay_handler.cpp  joint_trajectory_action.cpp  joint_trajectory_downloader.cpp  joint_trajectory_interface.cpp  joint_trajectory_streamer.cpp  robot_group.cpp  robot_state_interface.cpp  robot_status_relay_handler.cpp  siasun_dualarm.cpp~  siasun_dualarm_utils.cpp  system_safty.cpp
siasun_dualarm_driver/src/simple_message/: byte_array.cpp  message_manager.cpp  robot_status.cpp
siasun_dualarm_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
siasun_dualarm_msgs/msg/: RobotStatus.msg~
siasun_dualarm_msgs/srv/: CmdJointTrajectory.srv  GetRobotInfo.srv~  IORW.srv  IORW.srv~  MoveHead.srv~  SetDrivePower.srv  SetRemoteLoggerLevel.srv~  StartMotion.srv  StopMotion.srv~
